[增加] 加密和解密工具类
